fixed masthead collapse on front-page

--- a/assets/css/sass/blocks/_menu.scss
+++ b/assets/css/sass/blocks/_menu.scss
@@ -17,7 +17,7 @@
             }
         }  
     }
-    // Test classes
+    // Temporary behaviour, JS will do a better job in the long run
     .site-menu.is-expanded &,
     body.home & {
         @include display(block);
@@ -33,5 +33,11 @@
     }
     &.current-page-item-parent {
         @include display(block);
+    }
+}
+// Temporary behaviour, JS will do a better job in the long run
+.header-menu {
+    body.home .masthead--collapsed & {
+        display: none;
     }
 }
