--- a/assets/css/sass/shared/_variables.scss
+++ b/assets/css/sass/shared/_variables.scss
@@ -3,7 +3,7 @@
 $max-width: rem(1128) !global;
 $grid-columns: 12 !global;
 
-$container-padding: rem(64);
+$container_padding: rem(64);
 
 // Breakpoints
 // ------------------------------------------- /
